[package]
name = "transports_py"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
name = "transports"
path = "rust/python/lib.rs"
crate-type = ["cdylib"]

[dependencies]
transports = { path = "./rust", version = "*" }
pyo3 = { version = "0.29.0", features = ["abi3", "extension-module", "multiple-pymethods"] }

[profile.release]
panic = 'abort'
lto = true

[profile.test.junit]
path = "junit.xml"

[workspace]
members = [
    "js",
    "rust",
]
