[package]
name = "transports_js"
version = "0.5.0"
edition = "2021"
publish = false
keywords = ["experimental"]
include = ["src/**/*", "Cargo.toml", "package.json"]

[lib]
name = "transports"
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
transports = { path = "../rust", version = "*" }
wasm-bindgen = "=0.2.126"
